[build-system]
requires = [
    "setuptools>=64.0.0",
    "wheel"
]
build-backend = "setuptools.build_meta"


[project]
name = "rssbot"
description = "24/7 feed fetcher"
version = "571"
authors = [
    {name = "Bart Thate",email = "bthate@dds.nl"},
]
readme = "README.rst"
license = {text="Public Domain"}
classifiers = [ 
    'Development Status :: 3 - Alpha',
    'License :: Public Domain',
    'Operating System :: Unix',
    'Programming Language :: Python',
    'Topic :: Utilities'
]


[project.urls]
"home" = "https://pypi.org/project/rssbot"
"bugs" = "https://github.com/xobjectz/rssbot/issues"
"source" = "https://github.com/xobjectz/rssbot"

[tools.setuptools]
packages=[
    "rssbot",
    "rssbot.modules",
    "rssbot.user"
]
script-files = [
    "bin/rssbot",
    "bin/rssbotd",
    "bin/rssbotsh"
]
zip-safe=true

[tool.setuptools.data-files]
"share/doc/rssbot" = [
    "README.rst"
]
